OP-83: profile pic.